# Unified-Media-Converter

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  __main__.py  logo_and_icon_specs.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
docs/: api.rst  changelog.rst  contributing.rst  features.rst  index.rst  installation.rst  license.rst  readme.rst  usage.rst
src/: __init__.py  __main__.py  unified_media_converter.py
tests/: conftest.py  test_basic_functionality.py
